--- a/.env
+++ b/.env
@@ -7,3 +7,8 @@ SQL_USER=postgres
 SQL_PASSWORD=postgres
 SQL_HOST=localhost
 SQL_PORT=5432
+APP_ID=1718719
+KEY=1b73ff2cb6205e81e98b
+SECRET=350105b659f56e036a45
+CLUSTER='eu'
+SSL=1
